fix: wrond bin icon dark mode color fix

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@
         @apply text-2xl rounded-full border-2 border-blue-300 p-2 hover:bg-blue-300
             hover:cursor-pointer transition duration-150;
     }
-    img {
+    button img {
         @apply dark:bg-transparent dark:invert dark:hover:invert-0;
     }
 }
